--- a/News
+++ b/News
@@ -1,3 +1,11 @@
+AFEchidna V1.62
+===========
+* Echidna version V 1.62;
+* Update waldT() function;
+* Update loadsoft() function;
+......
+
+
 AFEchidna V1.54
 ===========
 * Echidna version V 1.54;
