--- a/News
+++ b/News
@@ -2,6 +2,8 @@ AFEchidna V1.68
 ===========
 * Echidna version V 1.68;
 * Fix some bug for coef() function; # 2022-11-28
+* Add subF function into echidna(); # 2023-02-02
+* Add some codes for AFEchidna to run in linux OS, not check;# 2023-02-02
 ......
 
 AFEchidna V1.62
